_docs/kustomize/akash-ip-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akash-ip-operator
  namespace: akash-services
  labels:
    akash.network/component: akash-ip-operator
spec:
  selector:
    matchLabels:
      app: akash-ip-operator
  replicas: 1
  template:
    metadata:
      labels:
        app: akash-ip-operator
        akash.network/component: akash-ip-operator
    spec:
      serviceAccountName: akash-ip-operator
      containers:
      - name: akash-ip-operator
        image: ghcr.io/ovrclk/akash:stable
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "/boot/run.sh"]
        ports:
          - name: api
            containerPort: 8086
        volumeMounts:
          - name: boot
            mountPath: /boot
            readOnly: true
      volumes:
        - name: boot
          configMap:
            name: akash-ip-operator-boot
