_docs/kustomize/akash-ip-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akash-ip-operator
spec:
  selector:
    akash.network/component: akash-ip-operator
  ports:
    - name: api
      port: 8086
