_docs/kustomize/akash-ip-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-ip-operator
  namespace: akash-services
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

spec:
  ingressClassName: "akash-ingress-class"
  rules:
    - host: akash-ip-operator.localhost
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: akash-ip-operator
               port:
                 name: status
